--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,11 @@ dependencies {
     implementation libs.glide
     annotationProcessor libs.compiler
 
+    implementation libs.paging.runtime
+    implementation libs.lottie
+
+
+
     implementation libs.hilt.android
 
 }
